Replace react-select with @dhis2/ui Select component
Replaced the usage of react-select with the Select component from @dhis2/ui to align with DHIS2's approved UI library.

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-07-02T02:49:43.275Z\n"
-"PO-Revision-Date: 2025-07-02T02:49:43.275Z\n"
+"POT-Creation-Date: 2025-07-23T11:25:25.743Z\n"
+"PO-Revision-Date: 2025-07-23T11:25:25.743Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -271,6 +271,9 @@ msgid ""
 msgstr ""
 "There are no options for {{categoryName}} for the selected period or "
 "organisation unit."
+
+msgid "No options found"
+msgstr "No options found"
 
 msgid "Search for {{categoryName}}"
 msgstr "Search for {{categoryName}}"
