Update filter placeholder to "Type to filter options" for consistency across category views

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-07-23T11:25:25.743Z\n"
-"PO-Revision-Date: 2025-07-23T11:25:25.743Z\n"
+"POT-Creation-Date: 2025-07-24T01:02:48.565Z\n"
+"PO-Revision-Date: 2025-07-24T01:02:48.565Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -275,8 +275,8 @@ msgstr ""
 msgid "No options found"
 msgstr "No options found"
 
-msgid "Search for {{categoryName}}"
-msgstr "Search for {{categoryName}}"
+msgid "Type to filter options"
+msgstr "Type to filter options"
 
 msgid "No results found for {{searchQuery}}"
 msgstr "No results found for {{searchQuery}}"
